Updated my resume with the new projects I'm working on and sneak peak to What I will be adding later

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>Oke Amuwha</title>
+    <title>Oke's Portfolio</title>
     <link rel="icon" href="images/Favicon_Logo.png" type="image/png"> <!--Favicon-->
   </head>
 <!-- 
-                                            !YPPP55PPPY~                                            
+                                             !YPPP55PPPY~                                            
                                           7G5!:     .:7PG!                                          
                                          5#~            !&J                                         
                                         7@^              ~@!                                        
@@ -193,10 +193,10 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
                     <img class="rounded-full border border-black mx-auto" src="images/Python.svg" alt="Python" width="80">
                     <p class="pt-2 text-lg">Python</p>
                   </div class="">
-                  <!--PHP-->
+                  <!--React-->
                   <div class="mb-5">
-                    <img class="rounded-full border border-black mx-auto" src="images/PHP.svg" alt="React" width="80">
-                    <p class="pt-2 text-lg">PHP</p>
+                    <img class="rounded-full border border-black mx-auto" src="images/React.svg" alt="React" width="80">
+                    <p class="pt-2 text-lg">React</p>
                   </div>
                 </div>
               </div>
@@ -237,13 +237,13 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
                   </div>
                   <!--Content-->
                   <div id="covers" class="tabcontent md:p-10">
-                    <img class="rounded-md mx-auto pb-5" src="images/Playlist Covers.png" alt="Picture of Spotify playlist covers" width="350">
-                    <p>Used Figma to understand the different frames and componants used in design to create comprehensive looking
+                    <img class="rounded-md mx-auto pb-5" src="images/Playlist_Covers.png" alt="Picture of Spotify playlist covers" width="350">
+                    <p>Use Figma to understand the different frames and componants used in design to create comprehensive looking
                       elements. This is a project I did for fun to make custom spotify playlist covers. 
                     </p>
                   </div>
                   <div id="mPlayer" class="tabcontent md:p-10">
-                    <img class="rounded-md mx-auto pb-5" src="images/Music Player.png" alt="Music Player Mock up" width="500">
+                    <img class="rounded-md mx-auto pb-5" src="images/Music_Player.png" alt="Music Player Mock up" width="500">
                     <p>I used figma and thier prototyping feature to design a rough mock up
                       of a music streaming service. I mainly did this to test out animations and UI design.
                     </p>
