--- a/index.html
+++ b/index.html
@@ -10,49 +10,8 @@
     <title>Oke's Portfolio</title>
     <link rel="icon" href="images/Favicon_Logo.png" type="image/png"> <!--Favicon-->
   </head>
-<!-- 
-                                             !YPPP55PPPY~                                            
-                                          7G5!:     .:7PG!                                          
-                                         5#~            !&J                                         
-                                        7@^              ~@!                                        
-                                        5#   7?.    :?!  .&J                                        
-                                        !@~ Y@G.    :G@J !@~                                        
-                                         ?#B@J        Y@G#7                                         
-                                         ^&@B?~:.  .:~J#@&^                                         
-                                        7@#^:7Y555555J7.~#@!                                        
-                                       Y@P.              :G@J                                       
-                                     .G@Y                  Y@P.                                     
-                                    ^#@7                    7@#^                                    
-                                   7@#^                      ^#&!                                   
-                                  Y@#7~!!!!!!!!!!!!!!!!!!!!!!~7&@J                                  
-                                .P@B5?!!!!!!!!!!!!!!!!!!!!!!!!?5#@P.                                
-                               ^#@G5!                          75B@B^                               
-                              7&&PY^                            ~YG@&!                              
-                             Y@#PJ:                              :YP&@J                             
-                           .P@B5?.                                .?5#@P.                           
-                          ^B@G5!                                    75B@B:                          
-                         7&@PY^                                      ~YG@&!                         
-                        J@&PJ:                                        :YP&@J                        
-                      .P@B5?.                                          .?5#@5.                      
-                     ^#@G5!                                              75B@B:                     
-                    !@#7YY:                                              :5J7&&!                    
-                   J@G: .J5^                                            ~5J. :B@?                   
-                 .P@Y     ?5!                                          757    .5@5.                 
-                ^#@7       !5?.                                      .J5~       ?@B:                
-               !@&~         ^5Y:                                    :YY:         !&&~               
-              J@G:           :J5^                                  ~5J.           :B@?              
-            .P@5               ?5!                                757              .5@5             
-     ^7JYYJJB@Y                 !5?.                            .?5~                 5@BJJYYJ7^     
-  :YG5?~^:J@#J5P7                ^5Y:                          :YY^                7P5J&@J:^~?5GY:  
- 7#J:     75:  ^PB:               .JY^........................~5J.               :BP^  ^57     :J#7 
-!@!           ^^^G#~^^^^^^^^^^^^^^^~5GPPPPPPPPPPPPPPPPPPPPPPPPGY~^^^^^^^^^^^^^^^~#G^^^           !@!
-GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG#@GGB5            BG
-5#               ~@~                                                            ~@~               #5
-:#5             :#5                                                              5#:             5#:
- .5B?:        ^YB?                                                                ?BY^        :?B5. 
-   ^J55YJ??JY557.                                                                  .755YJ??JY55J^   
-      .^~!!~^.                                                                        .^~!!~^.       
-                                    Website by Oke-Oghene Amuwha-->
+      
+<!--Website by Oke-Oghene Amuwha-->
 
   <!--Body-->
   <body>
@@ -206,119 +165,8 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
               <h1 id="projects" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
               <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
                 <div class="mb-10">
-                  <!--Projects in figma-->
-                  <p class="p-5 text-2xl font-semibold">Figma</p>
-                  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-                    <!--Playlist cover-->
-                    <div class="tabs">
-                      <button id="default2" class="tablinks" onclick="aboutSec(event, 'covers')">
-                        <div class="hover:text-yellow-500">
-                          <img class="rounded-full mx-auto" src="images/Cover.png" alt="Playlist Cover img" width="150">
-                          <p class="pt-2 text-lg">Playlist Covers</p>
-                        </div>
-                      </button>
-                    </div>
-                    <!--Music Player-->
-                    <div class="tabs">
-                      <button class="tablinks" onclick="aboutSec(event, 'mPlayer')">
-                        <div class="hover:text-yellow-500">
-                          <img class="rounded-full mx-auto" src="images/Music.png" alt="Music mock up" width="150">
-                          <p class="pt-2 text-lg">Music player</p>
-                        </div>
-                      </button>
-                    </div>
-                    <!--Portfolio-->
-                    <div class="tabs mb-5">
-                      <button class="tablinks" onclick="aboutSec(event, 'portfolio')">
-                        <div class="hover:text-yellow-500">
-                          <img class="rounded-full mx-auto" src="images/Portfolio.png" alt="Portfolio storyboard" width="150">
-                          <p class="pt-2 text-lg">Portfolio</p>
-                        </div>
-                      </button>
-                    </div>
-                  </div>
-                  <!--Content-->
-                  <div id="covers" class="tabcontent md:p-10">
-                    <img class="rounded-md mx-auto pb-5" src="images/Playlist_Covers.png" alt="Picture of Spotify playlist covers" width="350">
-                    <p>Use Figma to understand the different frames and componants used in design to create comprehensive looking
-                      elements. This is a project I did for fun to make custom spotify playlist covers. 
-                    </p>
-                  </div>
-                  <div id="mPlayer" class="tabcontent md:p-10">
-                    <img class="rounded-md mx-auto pb-5" src="images/Music_Player.png" alt="Music Player Mock up" width="500">
-                    <p>I used figma and thier prototyping feature to design a rough mock up
-                      of a music streaming service. I mainly did this to test out animations and UI design.
-                    </p>
-                  </div>
-                    <div id="portfolio" class="tabcontent md:p-10">
-                      <img class="rounded-md mx-auto pb-5" src="images/Portfolio (mobile).png" alt="Website Portfolio Mobile Version" width="400">
-                      <p>I used figma to design the portfolio you are currently on. 
-                        I decided to design the mobile version first because it is easier to scale up to a desktop view.
-                        Going from my figma design into the website view, there are some drastic changes because this was mainly 
-                        a framework of how I wanted it to look like roughly.
-                      </p>
-                    </div>
-                  <!--Projects in Code-->
-                  <p class="p-5 text-2xl font-semibold mt-10">Code</p>
-                  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-                    <!--Game of life-->
-                    <div class="tabs">
-                      <button class="tablinks" onclick="aboutSec(event, 'conway')">
-                        <div class="hover:text-yellow-500">
-                          <img class="rounded-full mx-auto" src="images/Life.png" alt="Game of life" width="150">
-                          <p class="pt-2 text-lg">Game of Life</p>
-                        </div>
-                      </button>
-                    </div>
-                    <!--Discord bot-->
-                    <div class="tabs">
-                      <button class="tablinks" onclick="aboutSec(event, 'discordBot')">
-                        <div class="hover:text-yellow-500">
-                          <img class="rounded-full mx-auto" src="images/Discord.png" alt="Discord bot" width="150">
-                          <p class="pt-2 text-lg">Discord Bot</p>
-                        </div>
-                      </button>
-                    </div>
-                    <!--Postogon-->
-                    <div class="tabs mb-5">
-                      <button class="tablinks" onclick="aboutSec(event, 'postogonSet')">
-                        <div class="hover:text-yellow-500">
-                          <img class="rounded-full border border-black mx-auto" src="images/Settings.png" alt="Settings page" width="150">
-                          <p class="pt-2 text-lg">Postogon Settings Page</p>
-                        </div>
-                      </button>
-                    </div>
-                  </div>
-                  <!--Content-->
-                  <div id="conway" class="tabcontent md:p-10">
-                    <p>
-                      <b class="text-red-600">Work In Progress</b>
-                    </p>
-                    <p>
-                      I'm using Conway's Game of Life to teach me how to use Python in a more applicable sense.
-                      I'm not done with the development of the game because there is a part I'm stuck on that I am actively 
-                      trying to solve.
-                    </p>
-                  </div>
-                  <div id="discordBot" class="tabcontent md:p-10">
-                    <p>
-                      <b class="text-red-600">Work In Progress</b>
-                    </p>
-                    <p>
-                      I am a part of a club at Wayne State called Society for Computer Developers.
-                      We are working on is a Discord Bot that does some basic commands. I was able to learn a bit of javascript
-                      and understand how to read json files. I haven't finished development of it yet.
-                    </p>
-                  </div> 
-                  <div id="postogonSet" class="tabcontent md:p-10">
-                    <img class="rounded-md mx-auto pb-5" src="images/Settings (full).png" alt="Settings image" width="200">
-                    <p>
-                      I was helping my friend and his team build a social media website. What I was tasked on doing
-                      was developing the front end of the settings page. With help from him and some other team members 
-                      I was able to learn Tailwind CSS and PHP (for decoupling the front and back end).
-                    </p>
-                  </div>
                 </div>
+                <p>Redesign will go here</p>
               </div>
               <!--Work Experience-->
               <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
