--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <!--Content-->
                 <div id="About" class="tabcontent">
-                  <p class="dark:text-white mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a rising senior at Wayne State University pursuing 
+                  <p class="dark:text-white mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a senior at Wayne State University pursuing 
                     my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning,
                     full stack development or UI/UX design.
                   </p>
