--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Website by Oke-Oghene Amuwha-->
 <html>
   <head>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -10,32 +11,30 @@
     <title>Oke's Portfolio</title>
     <link rel="icon" href="images/Favicon_Logo.png" type="image/png"> <!--Favicon-->
   </head>
-      
-<!--Website by Oke-Oghene Amuwha-->
 
   <!--Body-->
   <body>
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="fixed bg-gray-200/50 dark:dark:bg-neutral-700/50 backdrop-blur inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
+      <nav id="navbar" class="bg-gray-200/50 dark:bg-neutral-700/50 backdrop-blur fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
-          <div class="flex items-center flex-shrink-0 text-pink-800 mr-6">
+          <div class="text-pink-800 flex items-center flex-shrink-0 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
             <span class="font-bold text-2xl tracking-tight">Oke Amuwha</span>
           </div>
         </a>
         <div id="hamburger" class="block md:hidden">
-          <button class="flex items-center px-3 py-2 border border-black dark:border-white dark:text-white rounded hover:text-pink-800 hover:border-pink-800">
+          <button class="border border-black dark:border-white dark:text-white hover:text-pink-800 hover:border-pink-800 flex items-center px-3 py-2 rounded">
             <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
           </button>
         </div>
         <div id="content" class="w-full hidden transition-all ease-in-out md:flex md:items-center md:w-auto">
           <div class="text-sm dark:text-white md:flex-grow">
-            <a href="#school" class="block mt-4 md:inline-block md:mt-0 hover:text-yellow-500 mr-4">About</a>
-            <a href="#skills" class="block mt-4 md:inline-block md:mt-0 hover:text-yellow-500 mr-4">Skills</a>
-            <a href="#projects" class="block mt-4 md:inline-block md:mt-0 hover:text-yellow-500 mr-4">Projects</a>
-            <a href="#experience" class="block mt-4 md:inline-block md:mt-0 hover:text-yellow-500 mr-4">Experience</a>
+            <a href="#school" class="hover:text-yellow-500 block mt-4 md:inline-block mr-4 md:mt-0">About</a>
+            <a href="#skills" class="hover:text-yellow-500 block mt-4 md:inline-block mr-4 md:mt-0">Skills</a>
+            <a href="#projects" class=" hover:text-yellow-500 block mt-4 md:inline-block md:mt-0 mr-4">Projects</a>
+            <a href="#experience" class="hover:text-yellow-500 block mt-4 md:inline-block md:mt-0 mr-4">Experience</a>
           </div>
           <div>
             <a href="files/Oke-Oghene_Amuwha_Resume.pdf" target="_blank" class="inline-block text-sm px-4 py-2 leading-none border rounded text-yellow-500 border-yellow-500 hover:border-transparent hover:text-white hover:bg-pink-800 mt-4 md:mt-0">
@@ -87,7 +86,7 @@
                   <button class="tablinks" onclick="aboutSec(event, 'Hobbies')"><p class="text-3xl font-bold p-5">Hobbies</p></button>
                 </div>
                 <!--Content-->
-                <div id="About" class="tabcontent">
+                <div id="About" class="tabcontent"> 
                   <p class="dark:text-white mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a senior at Wayne State University pursuing 
                     my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning,
                     full stack development or UI/UX design.
@@ -164,9 +163,17 @@
               <!--Projects-->
               <h1 id="projects" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
               <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="mb-10">
+                <div class="grid grid-cols-2 gap-10">
+                  <div class="">
+                    <h1 class="text-pink-800 text-2xl text-left font-bold">Playlist Covers</h1>
+                    <p class="text-left text-lg mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                      Volutpat mollis egestas libero nullam vitae arcu. Donec posuere fermentum, 
+                      sed neque risus, non. Amet, at lectus vestibulum eleifend. Sed ornare.</p>
+                  </div>
+                  <div class="pl-50">
+                    <img src="images/PlaylistCover.png" alt="Playlist designs from figma" width="500">
+                  </div>
                 </div>
-                <p>Redesign will go here</p>
               </div>
               <!--Work Experience-->
               <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
