Made a more complete mock up of the project redesign. Will also redesign the work experience tab as well

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="bg-gray-200/50 dark:bg-neutral-700/50 backdrop-blur fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
+      <nav id="navbar" class="bg-gray-200/50 dark:bg-neutral-800/50 backdrop-blur fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
           <div class="text-pink-800 flex items-center flex-shrink-0 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
@@ -163,18 +163,51 @@
               <!--Projects-->
               <h1 id="projects" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
               <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2 gap-10">
-                  <div class="">
+                <div class="grid grid-cols-2 md:grid-cols-1">
+                  <!-- Left container -->
+                  <div class="p-10">
                     <h1 class="text-pink-800 text-2xl text-left font-bold">Playlist Covers</h1>
                     <p class="text-left text-lg mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                       Volutpat mollis egestas libero nullam vitae arcu. Donec posuere fermentum, 
                       sed neque risus, non. Amet, at lectus vestibulum eleifend. Sed ornare.</p>
                   </div>
-                  <div class="pl-50">
-                    <img src="images/PlaylistCover.png" alt="Playlist designs from figma" width="500">
+                  <!-- Right container -->
+                  <div class="flex justify-end pr-10">
+                    <img src="images/PlaylistCover.png" alt="Playlist designs from figma" width="250">
                   </div>
                 </div>
               </div>
+              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2 md:grid-cols-1">
+                  <!-- Left container -->
+                  <div class="p-10">
+                    <h1 class="text-pink-800 text-2xl text-left font-bold">Live Waveform</h1>
+                    <p class="text-left text-lg mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                      Volutpat mollis egestas libero nullam vitae arcu. Donec posuere fermentum, 
+                      sed neque risus, non. Amet, at lectus vestibulum eleifend. Sed ornare.</p>
+                  </div>
+                  <!-- Right container -->
+                  <div class="flex justify-end pr-10">
+                    <img src="images/LiveWaveform.png" alt="Playlist designs from figma" width="250">
+                  </div>
+                </div>
+              </div>
+              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2 md:grid-cols-1">
+                  <!-- Left container -->
+                  <div class="p-10">
+                    <h1 class="text-pink-800 text-2xl text-left font-bold">Spotify Mockup</h1>
+                    <p class="text-left text-lg mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                      Volutpat mollis egestas libero nullam vitae arcu. Donec posuere fermentum, 
+                      sed neque risus, non. Amet, at lectus vestibulum eleifend. Sed ornare.</p>
+                  </div>
+                  <!-- Right container -->
+                  <div class="flex justify-end pr-10">
+                    <img src="images/SpotifyMock.png" alt="Playlist designs from figma" width="500">
+                  </div>
+                </div>
+              </div>
+              <!-- End Projects -->
               <!--Work Experience-->
               <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
               <div class="bg-white dark:bg-neutral-900 text-black dark:text-white rounded-lg p-10 m-5 shadow-sm">
@@ -256,6 +289,7 @@
                   </button>
                 </div>
               </div>
+              <!-- End Work Experience -->
               <!--Footer-->
               <footer>
                 <h1 class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
