Updated design of projects and resume, need to add href and fix navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="bg-gray-200/50 dark:bg-neutral-800/50 backdrop-blur fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
+      <nav id="navbar" class="bg-gray-200/50 dark:bg-gray-800/50 backdrop-blur fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
           <div class="text-pink-800 flex items-center flex-shrink-0 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
@@ -188,7 +188,7 @@
                   </div>
                   <!-- Right container -->
                   <div class="flex justify-end pr-10">
-                    <img src="images/LiveWaveform.png" alt="Playlist designs from figma" width="250">
+                    <img src="images/LiveWaveform.png" alt="Mockup of future project using Spotify" width="250">
                   </div>
                 </div>
               </div>
@@ -203,97 +203,93 @@
                   </div>
                   <!-- Right container -->
                   <div class="flex justify-end pr-10">
-                    <img src="images/SpotifyMock.png" alt="Playlist designs from figma" width="500">
+                    <img src="images/SpotifyMock.png" alt="Spotify mock design from Figma" width="500">
                   </div>
                 </div>
               </div>
               <!-- End Projects -->
               <!--Work Experience-->
               <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
-              <div class="bg-white dark:bg-neutral-900 text-black dark:text-white rounded-lg p-10 m-5 shadow-sm">
-                <!--Tab Overlay-->
-                <!--Allstate (Overlay)-->
-                <div id="overlay1" class="backdrop-blur-sm" onclick="off1()">
-                  <div id="format" class="bg-white dark:bg-neutral-900 m-5 md:m-40 p-10 rounded-lg">
-                    <div class="p-10">
-                      <img class="rounded-full border border-black mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
-                    </div>
-                    <div class="text-black dark:text-white text-lg pt-5">
-                      <p class="p-2">Building full stack programs using React, javascript/typescript (frontend) and Java, Spring boot, JUnit (backend)</p>
-                      <p class="p-2">Partook in the launch of a new customer facing product launch that has been in development for over a year</p>
-                      <p class="p-2">Helped start up another internal product with other interns with the assistance of senior developers</p>
-                      <p class="p-2">Paired programming and test driven development</p>
-                      <p class="p-2">Utilized terminal to perform git commands</p>
-                    </div>
+              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2 md:grid-cols-1">
+                  <!-- Left container -->
+                  <div class="p-10">
+                    <h1 class="text-pink-800 text-2xl text-left font-bold">Allstate</h1>
+                    <p class="text-left text-lg mt-10">
+                      Building full stack programs using React, 
+                      javascript/typescript (frontend) and Java, Spring boot, JUnit (backend)
+                    </p>
+                    <p class="text-left text-lg mt-2">
+                      Partook in the launch of a new customer facing product launch that has been in development for over a year
+                    </p>
+                    <p class="text-left text-lg mt-2">
+                      Helped start up another internal product with other interns with the assistance of senior developers
+                    </p>
+                    <p class="text-left text-lg mt-2">
+                      Paired programming and test driven development
+                    </p>
+                    <p class="text-left text-lg mt-2">
+                      Utilized terminal to perform git commands
+                    </p>
+                  </div>
+                  <!-- Right container -->
+                  <div class="flex justify-end pr-10">
+                    <img src="images/Allstate.svg" alt="Image of the Allstate logo" width="250">
                   </div>
                 </div>
-                <!--Apple (Overlay)-->
-                <div id="overlay2" class="backdrop-blur-sm" onclick="off2()">
-                  <div id="format" class="bg-white dark:bg-neutral-900 m-5 md:m-40 p-10 rounded-lg">
-                    <div class="p-10">
-                      <img class="rounded-full border border-black mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
-                    </div>
-                    <div class="text-black dark:text-white text-lg pt-5">
-                      <p class="p-2">Highly skilled at uncovering customers' needs, then following through with enlightening solutions</p>
-                      <p class="p-2">Maintaining visual merchandising and assisting team members</p>
-                      <p class="p-2">Ready to apply my learning in customer interactions</p>
-                    </div>
+              </div>
+              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2 md:grid-cols-1">
+                  <!-- Left container -->
+                  <div class="p-10">
+                    <h1 class="text-pink-800 text-2xl text-left font-bold">Apple</h1>
+                    <p class="text-left text-lg mt-10">
+                      Highly skilled at uncovering customers' needs, 
+                      then following through with enlightening solutions
+                    </p>
+                    <p class="text-left text-lg mt-2">
+                      Maintaining visual merchandising and assisting team members
+                    </p>
+                    <p class="text-left text-lg mt-2">
+                      Ready to apply my learning in customer interactions
+                    </p>
+                  </div>
+                  <!-- Right container -->
+                  <div class="flex justify-end pr-10">
+                    <img src="images/Apple.svg" alt="Image of the Apple logo" width="250">
                   </div>
                 </div>
-                <!--Postogon (Overlay)-->
-                <div id="overlay3" class="backdrop-blur-sm" onclick="off3()">
-                  <div id="format" class="bg-white dark:bg-neutral-900 m-5 md:m-40 p-10 rounded-lg">
-                    <div class="p-10">
-                      <div class="w-40 h-40 rounded-full border border-black bg-white mx-auto">
-                        <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
-                        <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
-                        </svg>
-                      </div>
-                    </div>
-                    <div class="text-black dark:text-white text-lg pt-5">
-                      <p class="p-2">Follow agile methodology to develop and test new features</p>
-                      <p class="p-2">Utilize Figma to storyboard visualizations for front end development</p>
-                      <p class="p-2">Create documentation to streamline development</p>
+              </div>
+              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2 md:grid-cols-1">
+                  <!-- Left container -->
+                  <div class="p-10">
+                    <h1 class="text-pink-800 text-2xl text-left font-bold">Postogon</h1>
+                    <p class="text-left text-lg mt-10">
+                      Follow agile methodology to develop and test new features
+                    </p>
+                    <p class="text-left text-lg mt-2">
+                      Utilize Figma to storyboard visualizations for front end development
+                    </p>
+                    <p class="text-left text-lg mt-2">
+                      Create documentation to streamline development
+                    </p>
+                  </div>
+                  <!-- Right container -->
+                  <div class="flex justify-end pr-10">
+                    <div class="w-250 rounded-full bg-white">
+                      <svg aria-label="Home" class="" id="logo" width="250" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
+                      <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
+                      </svg>
                     </div>
                   </div>
-                </div>
-                <div class="dark:text-white grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-                  <!--Allstate-->
-                  <button onclick="on1()">
-                    <div class="hover:text-yellow-500">
-                      <div>
-                        <img class="rounded-full border border-black mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
-                      </div>
-                      <p class="pt-2 text-lg">Allstate</p>
-                    </div>
-                  </button>
-                  <!--Apple-->
-                  <button class="tabHeader" onclick="on2()">
-                    <div class="hover:text-yellow-500">
-                      <div>
-                        <img class="rounded-full border border-black mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
-                      </div>
-                      <p class="pt-2 text-lg">Apple</p>
-                    </div>
-                  </button>
-                  <!--Postogon-->
-                  <button class="tabHeader" onclick="on3()">
-                    <div class="hover:text-yellow-500">
-                      <div class="w-40 h-40 border border-black rounded-full bg-white mx-auto">
-                        <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
-                        <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
-                        </svg>
-                      </div>
-                      <p class="pt-2 text-lg">Postogon</p>
-                    </div>
-                  </button>
                 </div>
               </div>
               <!-- End Work Experience -->
               <!--Footer-->
               <footer>
                 <h1 class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
-                <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-5 m-5 shadow-sm">
                   <div class="p-4">
                     <div class="flex flex-row justify-center">
                       <a href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/" target="_blank">
@@ -319,6 +315,7 @@
                   <p>Oke Amuwha | &copy 2022</p>
                 </div>
               </footer>
+              <!-- End footer -->
             </div>
           </div>
         </div>
