made some edits to make the file more tailwind dependent

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </nav>
     </header>
-    <div class="parallax">
+    <div class="bg-fixed bg-no-repeat bg-center bg-cover" style="background-image: url(images/Background.jpg)">
       <!--Dark mode button-->
       <!-- <div class="flex justify-end items-center space-x-2">
         <span class="text-sm text-gray-800">Light</span>
